# mcppin

./: .gitignore  INTEGRATIONS.md  INTEROP.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: help.txt
mcppin/: __init__.py  cli.py  connect.py  core.py
tests/: test_connect.py  test_core.py
tests/fixtures/: tools.json
