[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcppin"
version = "0.1.0"
description = "Trust-On-First-Use pinning and drift detection for MCP tool definitions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cognis Digital" }]
keywords = ["mcp", "model-context-protocol", "security", "tool-poisoning", "agent-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/cognis-digital/mcppin"
Issues = "https://github.com/cognis-digital/mcppin/issues"

[project.scripts]
mcppin = "mcppin.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["mcppin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
